2011-02-15  Ami Fischman  <fischman@chromium.org>

        Reviewed by David Levin.

        Remove the artificial -32px shift for media controls in mediaDocuments
        so that they overlap the canvas as they do in non-mediaDocuments.
        This also fixes test_shell failing to update the media slider (see
        linked crbug below).

        https://bugs.webkit.org/show_bug.cgi?id=27798
        http://crbug.com/72623

        Test: media/video-controls-in-media-document.html
        Added a render test that asserts that the controls show up in the
        expected spot (0,208) instead of below the canvas (0,240).

        * css/mediaControlsChromium.css:

2011-02-15  Ryosuke Niwa  <rniwa@webkit.org>

        Reviewed by Darin Adler.

        Extract a function to process ancestor and their sibling nodes from processContents
        https://bugs.webkit.org/show_bug.cgi?id=54425

        Extracted processAncestorsAndTheirSiblings.

        * dom/Range.cpp:
        (WebCore::Range::processContents): Calls processContents.
        (WebCore::Range::processAncestorsAndTheirSiblings): Extracted from processContents.
        * dom/Range.h:

2011-02-15  Kent Tamura  <tkent@chromium.org>

        Reviewed by Darin Fisher.

        [Chromium] Rendering error of spin buttons on layers
        https://bugs.webkit.org/show_bug.cgi?id=54427

        Test: fast/forms/input-appearance-spinbutton-layer.html

        * rendering/RenderThemeChromiumWin.cpp:
          Add checks for multiple ThemePainter instances.
        (WebCore::RenderThemeChromiumWin::paintInnerSpinButton):
          Avoid to create multiple ThemePainter instances.

2011-02-15  Chris Rogers  <crogers@google.com>

        Reviewed by Kenneth Russell.

        Fix race condition in JavaScriptAudioNode
        https://bugs.webkit.org/show_bug.cgi?id=54518

        No new tests since audio API is not yet implemented.

        * webaudio/JavaScriptAudioNode.cpp:
        (WebCore::JavaScriptAudioNode::process):
